# lucide-icons-iced-0.14

./: Cargo.toml  README.md
src/: iced.rs  icon.rs  lib.rs
