[package]
name = "lucide-icons"
description = "Rust definitions for lucide-icons"
version = "0.525.0"
edition = "2024"
license = "MIT AND ISC"
authors = []
categories = ["gui"]
keywords = ["lucide-icons", "lucide", "icon", "iced", "font"]
readme = "README.md"

[features]
default = []
iced = ['dep:iced']

[dependencies]
iced = { path = "../iced_fork", optional = true, features = ["advanced"], default-features = false }